# outlast

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  commitlint.config.mjs  compose.dev.yaml  compose.yaml  docker-entrypoint.sh  env.example  eslint.config.mjs  oclif.manifest.json  package-lock.json  package.json  record.example.yaml  seed.csv  test-follow-up.sh  test-order-lookup.sh  tsconfig.cli.json  tsconfig.json  workflow.example.yaml
.cursor/commands/: create-validated-function.md
.cursor/rules/: verify-changes.md
.scripts/: mcp-configure.ts  test-mcp-server.sh
aidocs/: API_SUMMARY.md  EMAIL_CHANNEL_COMPLETE.md  EMAIL_CHANNEL_SETUP.md  EMAIL_REPLY_SETUP.md  ENV_SETUP.md  IMPLEMENTATION_STATUS.md  LANGCHAIN_AGENT_SETUP.md  NEXT_STEPS.md  README.md  RESEND_REPLY_LIMITATIONS.md  TESTING_GUIDE.md
config/: env.ts
mods/agents/: README.md  package.json  tsconfig.tsbuildinfo
mods/ai/: README.md  package.json
mods/apiserver/: .dockerignore  .mocharc.json  Dockerfile  README.md  package.json  prisma.config.ts  tsconfig.json  tsconfig.tsbuildinfo
mods/channels/: package.json
mods/common/: README.md  package.json  tsconfig.tsbuildinfo
mods/ctl/: README.md  oclif.manifest.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
mods/dashboard/: .gitignore  eslint.config.js  package.json  vite.config.ts
mods/identity/: README.md  package.json  tsconfig.tsbuildinfo
mods/langgraph-agents/: README.md  package.json  (+2 more)
src/: index.ts
utils/: __init__.py  create_record.py  pyproject.toml
utils/examples/: create_record.ipynb
(+345 files in other folders)
