[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "outlast-utils"
version = "0.1.0"
description = "Outlast API utilities (create_record client, etc.)"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-dir]
"outlast_utils" = "."
